<resources>
    <string name="app_name">TrassTarea</string>
    <string name="tv_titulo">Tus tareas, tu ritmo, tu éxito</string>
    <string name="btn_empezar">Empezar</string>
    <string name="it_añadir">Añadir a la lista</string>
    <string name="it_favoritos">Lista de favoritos</string>
    <string name="it_acerca">Acerda de...</string>
    <string name="it_salir">Salir</string>
    <string name="tv_quedan">Quedan:</string>
    <string name="tv_dias">días</string>
    <string name="añadir_tarea">Añadir Tarea</string>

    <string name="cancelar">Cancelar</string>
    <string name="et_titulo">Título</string>
    <string name="tv_prioritaria">Prioritaria</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="et_fechaCreacion">Fecha de Creación</string>
    <string name="et_fechaObjectivo">Fecha Objetivo</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_guardar">Guardar</string>
    <string name="etm_descripcion">Descripción</string>
    <string name="menu_descripcion">Descripción</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_borrar">Borrar</string>
    <string name="estado_tareas">No hay tareas disponibles</string>
    <string name="acercade">Acerca de</string>
    <string name="centro">Centro</string>
    <string name="autor">Autor/a</string>
    <string name="descripcion_tarea">Descripción de la tarea</string>

    <!-- Strings para estados -->
    <string name="estado_no_iniciada">No iniciada</string>
    <string name="estado_iniciada">Iniciada</string>
    <string name="estado_avanzada">Avanzada</string>
    <string name="estado_casi_finalizada">Casi finalizada</string>
    <string name="estado_finalizada">Finalizada</string>

    <string name="tarea_borrada">Tarea Borrada</string>
    <string name="tarea_editada">Se ha editado una tarea</string>
    <string name="tarea_guardada">Se ha guardado una tarea</string>

    <string name="boton_aceptar">Aceptar</string>
    <!-- Strings used for fragments for navigation -->

    <string name="editar_tarea">Editar Tarea</string>

    <string name="salir">Hasta Pronto</string>
    <string name="aviso">Por favor, complete todos los campos</string>
    <string name="borrar_tarea">¿Quieres borrar la tarea </string>

    <!-- Strings para estadisticas -->
    <string name="estadisticas">Estadísticas</string>
    <string name="promedio_progreso">El promedio de progreso de las tareas es del </string>
    <string name="tareas_estado">Cantidad de tareas acabadas por estado:</string>
    <string name="fecha_promedio">La fecha objetivo promedio es</string>
    <string name="error_fecha">Error en el formato de la fecha</string>
    <string name="fecha_empieza">Tareas empezadas este mes</string>
    <string name="fecha_termina">Tareas que finalizan este mes</string>
    <string name="tarea_caducada">Tareas caducadas</string>
    <string name="tarea_prioritaria">Tareas Prioritarias</string>

    <!-- Strings para preferencias -->
    <string name="preferencias">Opciones</string>
    <string name="categoria_visualizacion">Vizualización</string>
    <string name="preferencia_tema">Tema</string>
    <string name="pequeno">Pequeño</string>
    <string name="medio">Medio</string>
    <string name="grande">Grande</string>
    <string name="letra">Tamaño de la letra</string>
    <string name="ordenacion">Ordenación</string>

    <string name="alfabetico">Alfabético</string>
    <string name="por_fecha">Por Fecha de creacion</string>
    <string name="por_progreso">Por progreso</string>

    <string name="criterio">Criterio</string>
    <string name="orden">Orden</string>

    <!-- Strings para descripciones botones -->
    <string name="añadir_documento">Añadir documento</string>
    <string name="añadir_audio">Añadir audio</string>
    <string name="añadir_foto">Añadir foto</string>
    <string name="añadir_video">Añadir video</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="tarjeta_sd">Tarjeta SD</string>
    <string name="limpieza_arch">Limpieza de archivos</string>

    <string name="documento">Documento</string>
    <string name="imagen">Imagen</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="btn_restablecer">Restablecer preferencias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>