<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/categoria_visualizacion">
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/preferencia_tema"
            app:icon="@drawable/ic_theme"
            app:key="tema" />
        <ListPreference

            app:entries="@array/valores_mostrados"
            app:entryValues="@array/valores_leidos"
            app:icon="@drawable/ic_leta"
            app:key="letra"
            app:summary="Elige tamaño letra"
            app:title="@string/letra"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ordenacion" >
        <ListPreference

            app:entries="@array/valores_criterio"
            app:entryValues="@array/valores_leidos"
            app:icon="@drawable/ic_filtro"
            app:key="criterio"
            app:summary="Elige criterio"
            app:title="@string/criterio"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/orden"
            app:icon="@drawable/ic_orden"
            app:key="orden" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/almacenamiento">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/tarjeta_sd"
            app:icon="@drawable/ic_sd_card"
            app:key="sd" />
    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number"
        android:key="limpieza"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/limpieza_arch"
        app:icon="@drawable/ic_basura" />

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_db"
        app:key="bd_externa"
        app:summaryOff="Interna"
        app:summaryOn="Externa"
        app:title="Base de datos" />

    <PreferenceCategory
        app:dependency="bd_externa"
        app:title="BASE DE DATOS EXTERNA">

        <!-- Nombre de la Base de Datos -->
        <EditTextPreference
            android:key="nombrebd"
            android:title="Nombre de la Base de Datos"
            android:inputType="text"
            android:defaultValue="bd"
            app:useSimpleSummaryProvider="true"/>

        <!-- Dirección IP -->
        <EditTextPreference
            android:key="ip"
            android:title="IP"
            android:inputType="text"
            android:defaultValue="10.0.2.2"
            app:useSimpleSummaryProvider="true"/>

        <!-- Puerto -->
        <EditTextPreference
            android:key="puerto"
            android:title="Puerto"
            android:inputType="number"
            android:defaultValue="1001"
            app:useSimpleSummaryProvider="true"/>

        <!-- Usuario -->
        <EditTextPreference
            android:key="usuario"
            android:title="Usuario"
            android:inputType="text"
            android:defaultValue="usuario"
            app:useSimpleSummaryProvider="true"/>

        <!-- Contraseña -->
        <EditTextPreference
            android:key="password"
            android:title="Contraseña"
            android:inputType="textPassword"
            android:defaultValue=""
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

    <Preference
        android:id="@+id/btn"
        android:key="restablecer"
        app:layout="@layout/boton_preferencias"/>


</PreferenceScreen>