<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MostrarTarea">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        tools:context=".MostrarTarea">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_star_outline_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_titulo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/et_titulo"
                app:boxStrokeColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMos_titulo"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fechaCreacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/et_fechaCreacion"
            app:layout_constraintBottom_toTopOf="@+id/til_fechaObjetivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_titulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMos_fechaCreacion"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fechaObjetivo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/et_fechaObjectivo"
            app:layout_constraintBottom_toTopOf="@+id/sp_progreso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_fechaCreacion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMos_fechaObjetivo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:id="@+id/tvMos_progreso"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:text="TextView" />
        </LinearLayout>

        <EditText
            android:id="@+id/etmMos_descripcion"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:focusable="false"
            android:gravity="start|top"
            android:hint="@string/etm_descripcion"
            android:inputType="textMultiLine"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnMos_documento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/añadir_video"
                android:src="@drawable/baseline_note_add_24"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btnMos_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/añadir_audio"
                android:src="@drawable/baseline_play_circle_24"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btnMos_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/añadir_documento"
                android:src="@drawable/baseline_audio_file_24"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btnMos_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/añadir_foto"
                android:src="@drawable/baseline_add_photo_alternate_24"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>